# Purifiersensor2

./: __init__.py  bme690.cpp  bme690.h  sensor.py
components/bme690/: CMakeLists.txt  __init__.py  bme690.h  sensor.py
components/bme690/lib/BME690_SensorAPI/: bme69x_i2c_esp_idf.h  bme69x_i2c_helper.h
lib/BME690_SensorAPI/: bme69x_i2c_esp_idf.c  bme69x_i2c_helper.c
